Fixed up overflow issue

--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -40,6 +40,11 @@ button:hover {
     margin-top: 0;
     font-weight: 400;
     font-size: 14px;
+    height: 20px;
+    width: 80%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .locations {
     height: 100%;
@@ -71,7 +76,15 @@ button:hover {
 .amenities .popover {
     padding: 10px 0;
     margin-left: -5px;
-    margin-top: 0%;
+    margin-top: -5px;
+}
+
+.state_input, .city_input {
+    margin-right: 10px;
+}
+
+.amenities .popover ul li input {
+    margin: 0 10px;
 }
 
 .amenities .popover ul{
@@ -79,7 +92,7 @@ button:hover {
 }
 
 .locations .popover {
-    margin-top: 0%;
+    margin-top: -5px;
 }
 .popover ul {
     list-style-type: none;
@@ -100,8 +113,4 @@ button:hover {
 .amenities:hover .popover,
 .locations:hover .popover {
     visibility: visible;
-}
-
-.amenity_filter {
-	margin-left: 10px;
 }
